chore: modernise codebase for Java 17 baseline (#1070)
* chore: modernise codebase for Java 17 baseline

Brings the codebase forward to take full advantage of the existing
Java 17 toolchain bump and to remove a long tail of dependencies that
no longer compile, build, or run cleanly.

Test framework
- Migrate every test from JUnit 4 + PowerMock to JUnit 5 (Jupiter).
- Mockito 3.7.7 -> 5.14.2; drop PowerMock entirely.
- javafaker 1.0.2 -> datafaker 2.5.4 (javafaker is unmaintained).
- hamcrest-library 1.2.1 -> hamcrest 2.2; awaitility 4.0.1 -> 4.3.0;
  mariaDB4j 2.6.0 -> 3.3.1; jacoco 0.8.11 -> 0.8.12.
- Add BasePluginDbTest.requireCommand(name) helper so command tests
  declare the assumption once in @BeforeEach instead of repeating
  Assumptions.assumeTrue(cmd != null) per @Test.

Runtime libraries
- HikariCP 6.3.3, ORMLite 6.1, MariaDB JDBC 3.5.7, MySQL Connector/J
  8.4.0 (H2 deferred to avoid an on-disk migration). DatabaseConfig
  now emits driver-specific JDBC URLs (sslMode for MariaDB 3.x;
  drops the deprecated disableMariaDbDriver flag for MySQL 8.x).
- SLF4J 1.x -> 2.0.17 with a custom BanManagerSlf4jServiceProvider
  registered via META-INF/services. Bukkit shadowJar enables
  mergeServiceFiles() and relocates org.slf4j at task level so the
  ServiceLoader finds the relocated provider in the shaded JAR.
- SnakeYAML 2.x: configure LoaderOptions with allowDuplicateKeys=true,
  32 MiB code-point limit and depth=100 to keep older user-edited
  YAML loading without surprises.
- bStats 3.2.1, PlaceholderAPI/Adventure refresh, Lombok 1.18.38.
- ORMLite logging is now scoped via Logger.setGlobalLogLevel on the
  shaded backend rather than the global LOCAL_LOG_LEVEL system
  property, so other plugins' ORMLite is unaffected.

Language idioms
- Convert plain DTOs to records: HistoryEntry, PlayerNameSummary,
  CommandInfo, Fetcher, UUIDFetcher, Hook, and a unified Webhook
  record (replaces the previous WebhookHookConfig/WebhookData pair).
  Records use compact const